# shiprs

./: Cargo.toml  Dockerfile  LICENSE  README.md  expand.rs
.circleci/: config.yml
.github/: dependabot.yml
examples/: create_container.rs  delete_container.rs  inspect_container.rs  list_containers.rs
shiprs/: Cargo.toml
shiprs/src/: container.rs  docker.rs  error.rs  lib.rs  transport.rs
shiprs/src/docker/: result.rs
shiprs_http/: Cargo.toml
shiprs_models/: .openapi-generator-ignore  Cargo.toml  README.md  build.rs  openapi_generator_config.yaml  pom.xml  taskfile.yml
shiprs_models/docs/: Address.md  AuthConfig.md  BuildCache.md  BuildInfo.md  BuildPruneResponse.md  ChangeType.md  ClusterInfo.md  ClusterVolume.md  ClusterVolumeInfo.md  ClusterVolumePublishStatusInner.md  ClusterVolumeSpec.md  ClusterVolumeSpecAccessMode.md  ClusterVolumeSpecAccessModeAccessibilityRequirements.md  ClusterVolumeSpecAccessModeCapacityRange.md  ClusterVolumeSpecAccessModeSecretsInner.md  Commit.md  Config.md  ConfigApi.md  ConfigCreateRequest.md  ConfigSpec.md  ContainerApi.md  ContainerConfig.md  ContainerCreateRequest.md  ContainerCreateResponse.md  ContainerInspectResponse.md  ContainerPruneResponse.md  ContainerState.md  ContainerStatus.md  ContainerSummary.md  ContainerSummaryHostConfig.md  ContainerSummaryNetworkSettings.md  ContainerTopResponse.md  ContainerUpdateRequest.md  ContainerUpdateResponse.md  ContainerWaitExitError.md  ContainerWaitResponse.md  CreateImageInfo.md  DeviceMapping.md  DeviceRequest.md  DistributionApi.md  (+177 more)
shiprs_models/src/: lib.rs  models.rs
shiprs_models/src/main/java/shiprs/: ShiprsCodegen.java
shiprs_models/src/main/resources/shiprs/: Cargo.mustache  README.mustache  lib.mustache  models.mustache
shiprs_models/src/models/: address.rs  auth_config.rs  build_cache.rs  build_info.rs  build_prune_response.rs  change_type.rs  cluster_info.rs  cluster_volume.rs  cluster_volume_info.rs  cluster_volume_publish_status_inner.rs  cluster_volume_spec.rs  cluster_volume_spec_access_mode.rs  cluster_volume_spec_access_mode_accessibility_requirements.rs  cluster_volume_spec_access_mode_capacity_range.rs  cluster_volume_spec_access_mode_secrets_inner.rs  commit.rs  config.rs  config_create_request.rs  config_spec.rs  container_config.rs  container_create_request.rs  container_create_response.rs  container_inspect_response.rs  container_prune_response.rs  container_state.rs  container_status.rs  container_summary.rs  container_summary_host_config.rs  container_summary_network_settings.rs  container_top_response.rs  container_update_request.rs  container_update_response.rs  container_wait_exit_error.rs  container_wait_response.rs  create_image_info.rs  device_mapping.rs  device_request.rs  distribution_inspect.rs  driver.rs  endpoint_ipam_config.rs  (+167 more)
src/: container.rs  datetime.rs  (+9 more)
(+33 files in other folders)
