[package]
name = "shiprs"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
description = "A Rust library for the Docker Engine API"
repository = "https://github.com/thibault-cne/shiprs"
authors = ["Thibault C."]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
