[package]
name = "shiprs"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
description = "A Rust library for the Docker Engine API"
repository = "https://github.com/thibault-cne/shiprs"
authors = ["Thibault C."]

[workspace]
members = ["shiprs_models"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", features = ["serde"], optional = true }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_urlencoded = "0.7.1"
shiprs_models = { path = "shiprs_models" }

[features]
default = ["unix-socket", "chrono"]
unix-socket = []
chrono = ["dep:chrono"]
