[package]
name = "shiprs_models"
version = "1.44.0"
authors = [ "Thibault C.", "Bollard contributors" ]
description = "Models used for the Shiprs rust Docker client API"
license = "MIT"
edition = "2021"

[dependencies]
chrono = { version = "0.4.37", default-features = false, features = ["std", "clock", "serde"], optional = true }
serde = { version = "1.0.197", features = ["derive"] }
time = { version = "0.3.36", features = ["formatting", "parsing"], optional = true }

serde_with = {version = "3.7.0", default-features = false, features = ["std"]}
serde_repr = "0.1.18"
